修复 GLM-TTS 在 ComfyUI 中的加载路径和权重查找

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-WeTextProcessing
 zhon
 zhconv
 inflect
@@ -9,4 +8,5 @@ regex
 scipy
 soundfile
 huggingface_hub
+contractions
 # onnxruntime-gpu # Optional: Uncomment if you don't have onnxruntime installed. ComfyUI often has it.
